Project

General

Profile

Actions

Bug #18419

closed

Possible deadlock performing a synchronous API action while refresh in-progress

Added by Jason Dillaman over 7 years ago. Updated about 7 years ago.

Status:
Resolved
Priority:
High
Assignee:
Jason Dillaman
Target version:
-
% Done:

0%

Source:
Tags:
Backport:
kraken,jewel
Regression:
No
Severity:
3 - minor
Reviewed:
Affected Versions:
ceph-qa-suite:
Pull request ID:
Crash signature (v1):
Crash signature (v2):

Description

While running the rbd-mirror workunit, the rbd CLI hung when completing the bench-write flush request.

2017-01-04 14:48:05.765443 7f4ffad7c700  1 heartbeat_map is_healthy 'tp_librbd thread tp_librbd' had timed out after 60

Related issues 2 (0 open2 closed)

Copied to rbd - Backport #18495: kraken: rbd: Possible deadlock performing a synchronous API action while refresh in-progressResolvedNathan CutlerActions
Copied to rbd - Backport #18496: jewel: Possible deadlock performing a synchronous API action while refresh in-progressResolvedNathan CutlerActions
Actions #1

Updated by Jason Dillaman over 7 years ago

  • Status changed from In Progress to Fix Under Review
Actions #2

Updated by Mykola Golub over 7 years ago

  • Status changed from Fix Under Review to Pending Backport
Actions #3

Updated by Loïc Dachary over 7 years ago

  • Copied to Backport #18495: kraken: rbd: Possible deadlock performing a synchronous API action while refresh in-progress added
Actions #4

Updated by Loïc Dachary over 7 years ago

  • Copied to Backport #18496: jewel: Possible deadlock performing a synchronous API action while refresh in-progress added
Actions #5

Updated by Nathan Cutler about 7 years ago

  • Status changed from Pending Backport to Resolved
Actions

Also available in: Atom PDF