librbd: possible deadlock with flush if refresh in-progress

Fixes: http://tracker.ceph.com/issues/18419
Signed-off-by: Jason Dillaman <dillaman@redhat.com>
(cherry picked from commit b95f92a5572d3035c20eba07e76d2c825a9853f7)

Conflicts:
	src/librbd/ImageState.h (master commit just adds a function
                      declaration, so just add it to jewel as well)